# PyForce

./: PyForce.py  README.md  forscan.py  pyproject.toml  requirements.txt
src/j2534diag/: app.py
src/j2534diag/gui/: icons.py  live_data.py  main_window.py
src/j2534diag/j2534/: init.py  j2534.py  j2534_device_finder.py  j2534_struct.py
src/j2534diag/protocols/: obd2.py
src/j2534diag/vehicle/: models.py
